--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.4.0",
+    "@lottiefiles/react-lottie-player": "^3.4.1",
     "axios": "^0.24.0",
     "cra-template": "1.1.2",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-images-uploading": "^3.1.3",
     "react-phone-input-2": "^2.14.0",
