--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@craco/craco": "^6.4.0",
     "@lottiefiles/react-lottie-player": "^3.4.1",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "cra-template": "1.1.2",
+    "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-images-uploading": "^3.1.3",
     "react-phone-input-2": "^2.14.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
