--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-dnd": "^15.1.0",
+    "react-dnd-html5-backend": "^15.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-images-uploading": "^3.1.3",
