--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "cra-template": "1.1.2",
+    "date-fns": "^2.28.0",
     "draft-js": "^0.11.7",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
+    "react-datepicker": "^4.6.0",
     "react-dnd": "^15.1.0",
     "react-dnd-html5-backend": "^15.1.0",
     "react-dom": "^17.0.2",
