--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-images-uploading": "^3.1.3",
+    "react-modal": "^3.14.4",
     "react-phone-input-2": "^2.14.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.5",
