--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
     "react-toastify": "^8.0.2",
+    "recharts": "^2.1.9",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1",
